--- a/src/_includes/assets/sass/components/project-card.scss
+++ b/src/_includes/assets/sass/components/project-card.scss
@@ -28,6 +28,7 @@
       border: 0.25em solid black;
       border-radius: 0.5em;
       margin: 0.125em 0;
+      letter-spacing:0.05em;
     }
   }
   @include media-desktop {  
